Controller / Kit de presse

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,14 +47,15 @@
 
 @import 'pages/defaultpage';
 @import 'pages/homepage';
+@import 'pages/kitpresse';
 @import 'pages/list';
 @import 'pages/log';
 @import 'pages/notification';
 @import 'pages/parrainage';
+@import 'pages/presentation';
 @import 'pages/profil';
 @import 'pages/reference';
 @import 'pages/searchpage';
-
 
 
 
