--- a/app/views/designers/_designer.html.erb
+++ b/app/views/designers/_designer.html.erb
@@ -382,44 +382,44 @@
     </div>
   </div>
   <% end %>
-
+    <div data-controller="validation-overlay">
       <% if !designer.validation %>
         <% if current_user.certified? || current_user.admin? %>
-          <div class="overlay-bottom" id="overlay-bottom">
+          <div class="overlay-bottom" id="overlay-bottom" data-validation-overlay-target="overlayBottom" style="display: none;">
             <div class="naviguation">
               <p class="naviguation-title">Panneau d'administration</p>
               <div class="naviguation-buttons">
                 <% if user_signed_in? && current_user.id == designer.user_id || current_user.admin? || current_user.certified?%>
-                  <%= link_to 'Valider le designer ✅', validate_designer_path(designer), class: 'button'%>
-                  <%= link_to 'Modifier le designer 📝', edit_designer_path(designer), class: 'button'%>
+                  <%= link_to 'Valider le designer', validate_designer_path(designer), class: 'button'%>
+                  <%= link_to 'Modifier le designer', edit_designer_path(designer), class: 'button'%>
                   <a href="#" class="button" data-toggle="modal" data-target="#globalRejectModal"
                   data-url="<%= reject_designer_path(designer) %>"
                   data-title="<%= designer.nom_designer %>">
-                    Supprimer le designer ❌
+                    Supprimer le designer
                   </a>
                 <% end %>
               </div>
               <div class="naviguation-buttons">
-                <%= link_to "Ajouter un autre designer 🫵", add_elements_path, class: "button" %>
+                <%= link_to "Ajouter un autre designer", add_elements_path, class: "button" %>
                 <%= link_to "Retour", validation_path, class: "button" %>
               </div>
             </div>
           </div>
         <%else%>
-          <div class="overlay-bottom" id="overlay-bottom">
+          <div class="overlay-bottom" id="overlay-bottom" data-validation-overlay-target="overlayBottom" style="display: none;">
             <div class="naviguation">
               <p class="naviguation-title">Que souhaitez-vous faire ?</p>
               <div class="naviguation-buttons">
-                <%= link_to "Ajouter un autre designer 🫵", add_elements_path, class: "button" %>
+                <%= link_to "Ajouter un autre designer", add_elements_path, class: "button" %>
                 <% if user_signed_in? && current_user.id == designer.user_id || current_user.admin? %>
-                  <%= link_to 'Annuler la soumission ❌', cancel_designer_path(designer), method: :delete, class: 'button', data: { confirm: 'Êtes-vous sûr de vouloir annuler la soumission de ce designer ?' } %>
+                  <%= link_to 'Annuler la soumission', cancel_designer_path(designer), method: :delete, class: 'button', data: { confirm: 'Êtes-vous sûr de vouloir annuler la soumission de ce designer ?' } %>
                 <% end %>
-                <%= link_to "Retour à l'accueil ✅", designers_path, class: "button" %>
+                <%= link_to "Retour à l'accueil", designers_path, class: "button" %>
               </div>
             </div>
           </div>
         <%end%>
-        <div class="validation" id="validation">
+        <div class="validation" id="validation" data-validation-overlay-target="validation">
           <%= image_tag "logo-white.svg", alt: "", class:"logo-overlay" %>
           <svg width="76" height="73" viewBox="0 0 76 73" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M69 33.4961V36.5186C68.996 43.527 66.7266 50.3463 62.5303 55.9595C58.334 61.5727 52.4357 65.6791 45.7149 67.6663C38.9941 69.6534 31.8111 69.4148 25.237 66.986C18.663 64.5572 13.0501 60.0684 9.23562 54.1891C5.42112 48.3097 3.60932 41.3548 4.07045 34.3616C4.53158 27.3684 7.24092 20.7117 11.7944 15.3841C16.3479 10.0565 22.5015 6.34359 29.3376 4.79908C36.1737 3.25456 43.3259 3.9612 49.7275 6.8136" stroke="white" stroke-width="6.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -433,9 +433,12 @@
             <path d="M27.8206 31L15.4103 42L3.00009 31" stroke="white" stroke-width="3.0207" stroke-linecap="square"/>
           </svg>
         </div>
-        <div class="overlay" id="overlay">
+        <div class="overlay" id="overlay" data-validation-overlay-target="overlay">
         </div>
       <% end %>
+    </div>
+
+    <%# Popup %>
       <div id="shareModal" class="popup" data-share-target="modal" data-action="click->share#backdropClose">
         <div class="popup-content">
           <div class="top-popup">
@@ -563,6 +566,9 @@
           </div>
         </div>
       </div>
+
+
+
       <script>
         document.addEventListener('DOMContentLoaded', function() {
         // Ouvrir le modal
