--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,3 @@
-<!-- filepath: /Users/thomasriq/omniscient_design/app/views/layouts/application.html.erb -->
 <!DOCTYPE html>
 <html lang="fr">
   <head>
@@ -60,23 +59,21 @@
                   when 'light-mode' then 'light-mode'
                   else ''
                 end %>
-<body class="<%= body_class %> <%= 'no-scroll' if (controller_name == 'oeuvres' || controller_name == 'designers') && action_name == 'index' %>">
-<div id="cookie-consent-banner" 
-     data-controller="cookie-consent" 
-     data-cookie-consent-target="banner" 
-     style="display:none;">
-  <div>
-    <p>Nous utilisons des cookies pour améliorer votre expérience. Acceptez-vous l'utilisation des cookies ?</p>
-    <button data-action="click->cookie-consent#accept">Accepter</button>
-    <button data-action="click->cookie-consent#decline">Refuser</button>
-  </div>
-</div>
+  <body class="<%= body_class %> <%= 'no-scroll' if (controller_name == 'oeuvres' || controller_name == 'designers') && action_name == 'index' %>">
+    <div id="cookie-consent-banner" 
+        data-controller="cookie-consent" 
+        data-cookie-consent-target="banner" 
+        style="display:none;">
+      <div>
+        <p>Nous utilisons des cookies pour améliorer votre expérience. Acceptez-vous l'utilisation des cookies ?</p>
+        <button data-action="click->cookie-consent#accept">Accepter</button>
+        <button data-action="click->cookie-consent#decline">Refuser</button>
+      </div>
+    </div>
 
 
     <% if notice.present? %>
-      <div class="alert" 
-          data-controller="alert"
-          data-alert-target="close">
+      <div class="alert" data-controller="alert">
         <p><%= notice %></p>
         <span class="closebtn" data-alert-target="close">&times;</span>
         <div class="progress-container">
@@ -85,10 +82,7 @@
       </div>
     <% elsif flash.any? %>
       <% flash.each do |key, message| %>
-        <div class="alert <%= key %>" 
-            data-controller="alert"
-            data-alert-target="progress"
-            data-alert-target="close">
+        <div class="alert <%= key %>" data-controller="alert">
           <%= message %>
           <span class="closebtn" data-alert-target="close">&times;</span>
           <div class="progress-container">
