--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -46,7 +46,7 @@
 
 .card {
   padding-top: 120px;
-  height: calc(95dvh - 50px);
+  height: 95dvh;
   position: relative;
   width: 50vw;
   scroll-snap-align: start;
